project placed on hold

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -25,21 +25,26 @@
         <form novalidate>
             <ul>
                 <l1>
-                    <input type="text" id="first-name" placeholder="First Name" required />
-                    <div class="error"></div>
+                    <input type="text" id="first-name" placeholder="First Name" required 
+                     />
+                     <img src="img/icon-error.svg">
+                    <small class="error">error message</small>
                 </l1>
                 <l1>
                     <input type="text" id="last-name" placeholder="Last Name" required />
-                    <div class="error"></div>
+                    <img src="img/icon-error.svg">
+                    <small class="error"></small>
                 </l1>
                 <l1>
                     <input type="email" id="mail" placeholder="Email Address" 
                     required minlength="8" />
-                    <div class="error"></div>
+                    <img src="img/icon-error.svg">
+                    <small class="error"></small>
                 </l1>
                 <l1>
                     <input type="password" id="password" placeholder="Password" required />
-                    <div class="error"></div>
+                    <img src="img/icon-error.svg">
+                    <small class="error"></small>
                 </l1>
                 <li>
                     <button class="btn2" type="submit">CLAIM YOUR FREE TRIAL</button>
