--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="form">
             <button class="btn1"><strong>try it free 7days</strong> then $20/month.thereafter</button>
-            <form>
+            <form novalidate>
                 <p>
                     <input type="text" name="name" id="firstname" placeholder="First Name">
                     <small></small>
